Added packaging and versioning. Refactored main